tests/invalid/open_non_str_arg/main.py
def run_case() -> None:
    data: str = open(123)


if __name__ == "__main__":
    run_case()
